--- a/ElectroMarket/CapaPresentacion/CapaPresentacion.csproj
+++ b/ElectroMarket/CapaPresentacion/CapaPresentacion.csproj
@@ -88,6 +88,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="VistaSuper.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="VistaSuper.Designer.cs">
+      <DependentUpon>VistaSuper.cs</DependentUpon>
+    </Compile>
     <Compile Include="VistaVendedor.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -116,6 +122,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="VistaSuper.resx">
+      <DependentUpon>VistaSuper.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="VistaVendedor.resx">
       <DependentUpon>VistaVendedor.cs</DependentUpon>
     </EmbeddedResource>
