--- a/ElectroMarket/CapaPresentacion/CapaPresentacion.csproj
+++ b/ElectroMarket/CapaPresentacion/CapaPresentacion.csproj
@@ -116,6 +116,12 @@
     <Compile Include="RestaurarBD.Designer.cs">
       <DependentUpon>RestaurarBD.cs</DependentUpon>
     </Compile>
+    <Compile Include="Usuarios.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Usuarios.Designer.cs">
+      <DependentUpon>Usuarios.cs</DependentUpon>
+    </Compile>
     <Compile Include="Venta.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -171,6 +177,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="RestaurarBD.resx">
       <DependentUpon>RestaurarBD.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Usuarios.resx">
+      <DependentUpon>Usuarios.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Venta.resx">
       <DependentUpon>Venta.cs</DependentUpon>
