--- a/ElectroMarket/CapaPresentacion/CapaPresentacion.csproj
+++ b/ElectroMarket/CapaPresentacion/CapaPresentacion.csproj
@@ -68,12 +68,32 @@
     <Compile Include="ClientesAdmin.Designer.cs">
       <DependentUpon>ClientesAdmin.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmMisVentas.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmMisVentas.Designer.cs">
+      <DependentUpon>frmMisVentas.cs</DependentUpon>
+    </Compile>
     <Compile Include="MisVentas.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="MisVentas.Designer.cs">
       <DependentUpon>MisVentas.cs</DependentUpon>
     </Compile>
+    <Compile Include="Modales\mdProductos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Modales\mdProductos.Designer.cs">
+      <DependentUpon>mdProductos.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Modales\mdProveedor.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Modales\mdProveedor.Designer.cs">
+      <DependentUpon>mdProveedor.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Modales\Producto.cs" />
+    <Compile Include="Modales\Proveedor.cs" />
     <Compile Include="ProductosAdmin.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -122,11 +142,11 @@
     <Compile Include="Usuarios.Designer.cs">
       <DependentUpon>Usuarios.cs</DependentUpon>
     </Compile>
-    <Compile Include="Venta.cs">
+    <Compile Include="DetalleVenta.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Venta.Designer.cs">
-      <DependentUpon>Venta.cs</DependentUpon>
+    <Compile Include="DetalleVenta.Designer.cs">
+      <DependentUpon>DetalleVenta.cs</DependentUpon>
     </Compile>
     <Compile Include="VistaAdmin.cs">
       <SubType>Form</SubType>
@@ -157,8 +177,17 @@
     <EmbeddedResource Include="ClientesAdmin.resx">
       <DependentUpon>ClientesAdmin.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="frmMisVentas.resx">
+      <DependentUpon>frmMisVentas.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MisVentas.resx">
       <DependentUpon>MisVentas.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Modales\mdProductos.resx">
+      <DependentUpon>mdProductos.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Modales\mdProveedor.resx">
+      <DependentUpon>mdProveedor.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ProductosAdmin.resx">
       <DependentUpon>ProductosAdmin.cs</DependentUpon>
@@ -181,8 +210,8 @@
     <EmbeddedResource Include="Usuarios.resx">
       <DependentUpon>Usuarios.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Venta.resx">
-      <DependentUpon>Venta.cs</DependentUpon>
+    <EmbeddedResource Include="DetalleVenta.resx">
+      <DependentUpon>DetalleVenta.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="VistaAdmin.resx">
       <DependentUpon>VistaAdmin.cs</DependentUpon>
