combo box traen datos de la base de datos

--- a/ElectroMarket/CapaPresentacion/CapaPresentacion.csproj
+++ b/ElectroMarket/CapaPresentacion/CapaPresentacion.csproj
@@ -149,6 +149,7 @@
     <Compile Include="FormVendedor\RegistrarVenta.Designer.cs">
       <DependentUpon>RegistrarVenta.cs</DependentUpon>
     </Compile>
+    <Compile Include="Utilidades\OpcionCombo.cs" />
     <Compile Include="VistaAdmin.cs">
       <SubType>Form</SubType>
     </Compile>
