--- a/ElectroMarket/CapaDatos/CapaDatos.csproj
+++ b/ElectroMarket/CapaDatos/CapaDatos.csproj
@@ -51,6 +51,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CD_Rol.cs" />
     <Compile Include="CD_Usuario.cs" />
     <Compile Include="Conexion.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
