--- a/ElectroMarket/CapaNegocio/CapaNegocio.csproj
+++ b/ElectroMarket/CapaNegocio/CapaNegocio.csproj
@@ -50,6 +50,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CN_Rol.cs" />
     <Compile Include="CN_Usuario.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
