--- a/ElectroMarket/CapaPresentacion/App.config
+++ b/ElectroMarket/CapaPresentacion/App.config
@@ -1,6 +1,20 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
-    </startup>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
+  </startup>
+
+	<connectionStrings>
+		<add 
+			name="cadena_conexion"
+			connectionString="Data Source=(local);Initial Catalog=DB_ElectroMarket;Integrated Security=True"
+			providerName="System.Data.SqlClient"
+		/>
+		<add
+			name="cadena_conexion2"
+			connectionString="Data Source=DESKTOP-8P8NVU6\SQLEXPRESS02;Initial Catalog=DB_ElectroMarket;Integrated Security=True"
+			providerName="System.Data.SqlClient"
+		/>
+	</connectionStrings>
+
 </configuration>
