--- a/ElectroMarket/CapaPresentacion/CapaPresentacion.csproj
+++ b/ElectroMarket/CapaPresentacion/CapaPresentacion.csproj
@@ -32,6 +32,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject>CapaPresentacion.Program</StartupObject>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="FontAwesome.Sharp, Version=6.3.0.0, Culture=neutral, PublicKeyToken=d16d1e4e568ec10f, processorArchitecture=MSIL">
       <HintPath>..\packages\FontAwesome.Sharp.6.3.0\lib\net472\FontAwesome.Sharp.dll</HintPath>
@@ -39,6 +42,7 @@
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
@@ -53,14 +57,156 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="FormSuperAdmin\BackupBD.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="FormSuperAdmin\BackupBD.Designer.cs">
+      <DependentUpon>BackupBD.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormAdmin\ClientesAdmin.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormAdmin\ClientesAdmin.Designer.cs">
+      <DependentUpon>ClientesAdmin.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormVendedor\MisVentas.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormVendedor\MisVentas.Designer.cs">
+      <DependentUpon>MisVentas.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormVendedor\FormDetalleVenta.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormVendedor\FormDetalleVenta.Designer.cs">
+      <DependentUpon>FormDetalleVenta.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormVendedor\ListaClientes.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormVendedor\ListaClientes.Designer.cs">
+      <DependentUpon>ListaClientes.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormAdmin\ProductosAdmin.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormAdmin\ProductosAdmin.designer.cs">
+      <DependentUpon>ProductosAdmin.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormAdmin\Categorias.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormAdmin\Categorias.Designer.cs">
+      <DependentUpon>Categorias.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormVendedor\ClientesVendedor.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormVendedor\ClientesVendedor.Designer.cs">
+      <DependentUpon>ClientesVendedor.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Login.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Login.Designer.cs">
+      <DependentUpon>Login.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormVendedor\ListaProductos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormVendedor\ListaProductos.Designer.cs">
+      <DependentUpon>ListaProductos.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormAdmin\Reportes.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormAdmin\Reportes.Designer.cs">
+      <DependentUpon>Reportes.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormSuperAdmin\RestaurarBD.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormSuperAdmin\RestaurarBD.Designer.cs">
+      <DependentUpon>RestaurarBD.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormSuperAdmin\Usuarios.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormSuperAdmin\Usuarios.Designer.cs">
+      <DependentUpon>Usuarios.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormVendedor\RegistrarVenta.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormVendedor\RegistrarVenta.Designer.cs">
+      <DependentUpon>RegistrarVenta.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Utilidades\OpcionCombo.cs" />
+    <Compile Include="VistaAdmin.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="VistaAdmin.Designer.cs">
+      <DependentUpon>VistaAdmin.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="VistaSuper.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="VistaSuper.Designer.cs">
+      <DependentUpon>VistaSuper.cs</DependentUpon>
+    </Compile>
+    <Compile Include="VistaVendedor.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="VistaVendedor.Designer.cs">
+      <DependentUpon>VistaVendedor.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="FormSuperAdmin\BackupBD.resx">
+      <DependentUpon>BackupBD.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormAdmin\Categorias.resx">
+      <DependentUpon>Categorias.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormAdmin\ClientesAdmin.resx">
+      <DependentUpon>ClientesAdmin.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormVendedor\MisVentas.resx">
+      <DependentUpon>MisVentas.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormVendedor\FormDetalleVenta.resx">
+      <DependentUpon>FormDetalleVenta.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormVendedor\ListaClientes.resx">
+      <DependentUpon>ListaClientes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormAdmin\ProductosAdmin.resx">
+      <DependentUpon>ProductosAdmin.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormVendedor\ClientesVendedor.resx">
+      <DependentUpon>ClientesVendedor.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Login.resx">
+      <DependentUpon>Login.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormVendedor\ListaProductos.resx">
+      <DependentUpon>ListaProductos.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormAdmin\Reportes.resx">
+      <DependentUpon>Reportes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormSuperAdmin\RestaurarBD.resx">
+      <DependentUpon>RestaurarBD.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormSuperAdmin\Usuarios.resx">
+      <DependentUpon>Usuarios.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormVendedor\RegistrarVenta.resx">
+      <DependentUpon>RegistrarVenta.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="VistaAdmin.resx">
+      <DependentUpon>VistaAdmin.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -69,7 +215,14 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="VistaSuper.resx">
+      <DependentUpon>VistaSuper.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="VistaVendedor.resx">
+      <DependentUpon>VistaVendedor.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -83,6 +236,34 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\logo-electromarket-blanco.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\logo-electromarket.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\CapaEntidades\CapaEntidades.csproj">
+      <Project>{351b3476-3e2d-43da-92f2-b5dd2d86cd20}</Project>
+      <Name>CapaEntidades</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\CapaNegocio\CapaNegocio.csproj">
+      <Project>{d0cfebf7-150b-4bb0-80a6-1b3b6c3b9b4b}</Project>
+      <Name>CapaNegocio</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\logo_sql.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\restaurar_bd.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\sql_server.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\imagen_backup.jpeg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
