--- a/ElectroMarket/CapaEntidades/CapaEntidades.csproj
+++ b/ElectroMarket/CapaEntidades/CapaEntidades.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Categoria.cs" />
     <Compile Include="Cliente.cs" />
     <Compile Include="DetalleVenta.cs" />
+    <Compile Include="FormaPago.cs" />
     <Compile Include="Producto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Rol.cs" />
