CD_Producto y procedimientos almacenados Productos

--- a/ElectroMarket/CapaDatos/CapaDatos.csproj
+++ b/ElectroMarket/CapaDatos/CapaDatos.csproj
@@ -54,9 +54,12 @@
     <Compile Include="CD_Backup.cs" />
     <Compile Include="CD_Categoria.cs" />
     <Compile Include="CD_Cliente.cs" />
+    <Compile Include="CD_MisVentas.cs" />
+    <Compile Include="CD_Producto.cs" />
     <Compile Include="CD_Restaurar.cs" />
     <Compile Include="CD_Rol.cs" />
     <Compile Include="CD_Usuario.cs" />
+    <Compile Include="CD_Venta.cs" />
     <Compile Include="Conexion.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
