--- a/ElectroMarket/CapaDatos/CapaDatos.csproj
+++ b/ElectroMarket/CapaDatos/CapaDatos.csproj
@@ -54,6 +54,7 @@
     <Compile Include="CD_Backup.cs" />
     <Compile Include="CD_Categoria.cs" />
     <Compile Include="CD_Cliente.cs" />
+    <Compile Include="CD_DetalleVenta.cs" />
     <Compile Include="CD_MisVentas.cs" />
     <Compile Include="CD_Producto.cs" />
     <Compile Include="CD_Restaurar.cs" />
