--- a/ElectroMarket/CapaNegocio/CapaNegocio.csproj
+++ b/ElectroMarket/CapaNegocio/CapaNegocio.csproj
@@ -54,6 +54,7 @@
     <Compile Include="CN_Categoria.cs" />
     <Compile Include="CN_Cliente.cs" />
     <Compile Include="CN_ConexionBD.cs" />
+    <Compile Include="CN_DetalleVenta.cs" />
     <Compile Include="CN_Producto.cs" />
     <Compile Include="CN_Restaurar.cs" />
     <Compile Include="CN_Rol.cs" />
