agrego plantilla de factura html para el pdf

--- a/ElectroMarket/CapaPresentacion/CapaPresentacion.csproj
+++ b/ElectroMarket/CapaPresentacion/CapaPresentacion.csproj
@@ -289,5 +289,8 @@
   <ItemGroup>
     <None Include="Resources\ee38e2845c18afc829096dabfe0883be2.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\FacturaVenta.html" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
