agrego presupuesto como tipo de documento para realizar una venta. nueva plantilla.

--- a/ElectroMarket/CapaPresentacion/CapaPresentacion.csproj
+++ b/ElectroMarket/CapaPresentacion/CapaPresentacion.csproj
@@ -292,5 +292,8 @@
   <ItemGroup>
     <None Include="Resources\PlantillaVenta.html" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\PlantillaPresupuesto.html" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
