--- a/ElectroMarket/CapaDatos/CapaDatos.csproj
+++ b/ElectroMarket/CapaDatos/CapaDatos.csproj
@@ -55,6 +55,7 @@
     <Compile Include="CD_Categoria.cs" />
     <Compile Include="CD_Cliente.cs" />
     <Compile Include="CD_DetalleVenta.cs" />
+    <Compile Include="CD_Graficos.cs" />
     <Compile Include="CD_Producto.cs" />
     <Compile Include="CD_Restaurar.cs" />
     <Compile Include="CD_Rol.cs" />
