elimino procedimientos y armo estructura por capas en graficos que anden por filtro de fecha (falta terminar)

--- a/ElectroMarket/CapaNegocio/CapaNegocio.csproj
+++ b/ElectroMarket/CapaNegocio/CapaNegocio.csproj
@@ -55,6 +55,7 @@
     <Compile Include="CN_Cliente.cs" />
     <Compile Include="CN_ConexionBD.cs" />
     <Compile Include="CN_DetalleVenta.cs" />
+    <Compile Include="CN_Graficos.cs" />
     <Compile Include="CN_Producto.cs" />
     <Compile Include="CN_Restaurar.cs" />
     <Compile Include="CN_Rol.cs" />
